# libpkmn

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  appveyor.yml
docs/: CMakeLists.txt  Doxyfile_c.in  Doxyfile_cpp.in  Doxyfile_csharp.in  Doxyfile_java.in  Doxyfile_objc.in  Doxyfile_python.in
extensions/pkhex/: CMakeLists.txt  PK1Pokemon.cs  PKHeXPokemon.cs
include/: CMakeLists.txt  pkmn-c.h  pkmn.h
include/PKMN-ObjC/: CMakeLists.txt  PKItemList.h  PKItemSlot.h  PKItemSlotArray.h
include/pkmn/: CMakeLists.txt  build_info.hpp  config.hpp  config.hpp.in  daycare.hpp  exception.hpp  game_save.hpp  item_bag.hpp  item_list.hpp  item_slot.hpp  move_slot.hpp  pokedex.hpp  pokemon.hpp  pokemon_box.hpp  pokemon_party.hpp  pokemon_pc.hpp  version.hpp.in
include/pkmn-c/: CMakeLists.txt  breeding.h  build_info.h  calculations.h  config.h  database.h  daycare.h  enums.h  error.h  game_save.h  game_save2.h  item_bag.h  item_list.h  pokedex.h  pokemon.h  pokemon2.h  pokemon_box.h  pokemon_box2.h  pokemon_party.h  pokemon_party2.h  pokemon_pc.h  pokemon_pc2.h  string_types.h  types.h  version.h.in
lib/: CMakeLists.txt  build_info.cpp  daycare_gcnimpl.cpp  daycare_gcnimpl.hpp  daycare_gen1impl.cpp  daycare_gen1impl.hpp  daycare_gen2impl.cpp  daycare_gen2impl.hpp  daycare_impl.cpp  daycare_impl.hpp  env.hpp  exception.cpp  exception_internal.hpp  game_save_gbaimpl.cpp  game_save_gbaimpl.hpp  game_save_gcnimpl.cpp  game_save_gcnimpl.hpp  game_save_gen1impl.cpp  game_save_gen1impl.hpp  game_save_gen2impl.cpp  game_save_gen2impl.hpp  game_save_gen4impl.cpp  game_save_gen4impl.hpp  game_save_gen6impl.cpp  game_save_gen6impl.hpp  game_save_impl.cpp  game_save_impl.hpp  item_bag_gbaimpl.cpp  item_bag_gbaimpl.hpp  item_bag_gcnimpl.cpp  item_bag_gcnimpl.hpp  item_bag_gen1impl.cpp  item_bag_gen1impl.hpp  item_bag_gen2impl.cpp  item_bag_gen2impl.hpp  item_bag_gen4impl.cpp  item_bag_gen4impl.hpp  item_bag_gen6impl.cpp  item_bag_gen6impl.hpp  item_bag_impl.cpp  (+86 more)
lib/SQLiteCpp/: CMakeLists.txt  Column.cpp  Column.h  Database.cpp  LICENSE.txt  Statement.cpp  Statement.h
lib/breeding/: CMakeLists.txt  child_info.cpp  compatibility.cpp
lib/c/: CMakeLists.txt  build_info.cpp  c_enum_maps.hpp  cpp_to_c.cpp  cpp_to_c.hpp  daycare.cpp  enum_maps.cpp  enum_maps.hpp  error.cpp  error_internal.hpp  game_save.cpp  game_save2.cpp  item_bag.cpp  item_list.cpp  pkmn-c.pc.in  pkmn-c.rc.in  pokedex.cpp  pokemon.cpp  pokemon2.cpp  pokemon_box.cpp  pokemon_box2.cpp  pokemon_party.cpp  pokemon_party2.cpp  pokemon_pc.cpp  pokemon_pc2.cpp  private_exports.cpp  private_exports.h
lib/calculations/: CMakeLists.txt  damage.cpp  form.cpp  gender.cpp  hidden_power.cpp  nature.cpp  personality.cpp  shininess.cpp  size.cpp  spinda_spots.cpp  stats.cpp  time.h
lib/conversions/: CMakeLists.txt  conversions_common.cpp  conversions_common.hpp  gb_conversions.cpp  gb_conversions.hpp  gen3_conversions.cpp  gen3_conversions.hpp  gen4_conversions.cpp  gen4_conversions.hpp  gen5_conversions.cpp  gen5_conversions.hpp
lib/database/: CMakeLists.txt  database_common.cpp  database_common.hpp  enum_conversions.cpp  enum_conversions.hpp  id_to_index.cpp  id_to_index.hpp  id_to_string.cpp  id_to_string.hpp  index_to_string.cpp  index_to_string.hpp  item_entry.cpp  lists.cpp  move_entry.cpp  pokemon_entry.cpp
lib/enums/: CMakeLists.txt  enum_to_string.cpp
lib/io/: 3gpkm.cpp  3gpkm.hpp  CMakeLists.txt  gamecube_pokemon.hpp  pk1.cpp  pk1.hpp  pk2.cpp  pk2.hpp  pk6.cpp  pk6.hpp  pkm.cpp  pkm.hpp  read_write.cpp  read_write.hpp
lib/mem/: CMakeLists.txt  pokemon_setter.cpp  pokemon_setter.hpp  scoped_lock.hpp
lib/obj-c/: CMakeLists.txt  CppToObjC.h  CppToObjC.mm  PKItemList.mm  PKItemSlot.mm  PKItemSlotArray.mm
lib/pkmgc/: CMakeLists.txt  enum_maps.cpp  enum_maps.hpp  includes.hpp
lib/pksav/: CMakeLists.txt  conversions.cpp  conversions.hpp  enum_maps.cpp  enum_maps.hpp  enum_maps1.cpp  enum_maps2.cpp  party_data.cpp  party_data.hpp  pksav_call.hpp  pksav_common.hpp
lib/polymorphism/: CMakeLists.txt  is_libpkmn_impl.hpp  pokemon.cpp  pokemon.hpp
lib/qt/: AbilityListComboBox.cpp  AbilityListComboBox.hpp  CMakeLists.txt  GameListComboBox.cpp  GameListComboBox.hpp  GamecubeShadowPokemonListComboBox.cpp  GamecubeShadowPokemonListComboBox.hpp  ItemListComboBox.cpp  ItemListComboBox.hpp  LocationListComboBox.cpp  LocationListComboBox.hpp  MoveListComboBox.cpp  MoveListComboBox.hpp  NatureListComboBox.cpp  NatureListComboBox.hpp  PokemonListComboBox.cpp  PokemonListComboBox.hpp  RegionListComboBox.cpp  RegionListComboBox.hpp  RibbonListComboBox.cpp  RibbonListComboBox.hpp  Spinda.cpp  Spinda.hpp  SpindaSpotMap.hpp  SuperTrainingMedalListComboBox.cpp  SuperTrainingMedalListComboBox.hpp  TypeListComboBox.cpp  TypeListComboBox.hpp
lib/qt5/: AbilityListComboBox.cpp  CMakeLists.txt  GameListComboBox.cpp  GameListComboBox.hpp  ItemListComboBox.cpp  ItemListComboBox.hpp  LocationListComboBox.cpp  LocationListComboBox.hpp  MoveListComboBox.cpp  MoveListComboBox.hpp  NatureListComboBox.cpp  NatureListComboBox.hpp  PokemonListComboBox.cpp  PokemonListComboBox.hpp  RegionListComboBox.cpp  RegionListComboBox.hpp  RibbonListComboBox.cpp  RibbonListComboBox.hpp  SuperTrainingMedalListComboBox.cpp  SuperTrainingMedalListComboBox.hpp  TypeListComboBox.cpp  TypeListComboBox.hpp
lib/swig/: CMakeLists.txt  pkmn.i  pkmn_statics.i  swigdll.rc.in
lib/types/: CMakeLists.txt  attribute_engine.hpp  datetime.cpp  datetime_internal.hpp  lock_guard.hpp  mutex_helpers.hpp  rng.hpp
lib/utils/: CMakeLists.txt  floating_point_comparison.hpp  misc.hpp  paths.cpp.in
testing/: CMakeLists.txt
testing/Unity/: unity.h
tests/: CMakeLists.txt  c_database_test.c  c_items_test.c  c_lists_test.c  c_paths_test.c  cpp_calculations_test.cpp  cpp_database_entry_test.cpp  cpp_database_entry_test.hpp  cpp_lists_test.cpp  cpp_paths_test.cpp  item_entry_tests.cpp  move_entry_tests.cpp  pokemon_entry_tests.cpp  python_database_entry_test.py  python_lists_test.py  python_paths_test.py  unit_test_template.bat.in  unit_test_template.sh.in
(+969 files in other folders)
